# Spark

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
app/: CMakeLists.txt  cycle.cpp  cycle.hpp  main.cpp  render.cpp  render.hpp
